apps/base/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    matchLabels:
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      restartPolicy: Always

      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001

      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"

      containers:
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent:5.1.4
          imagePullPolicy: IfNotPresent

          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "100m"

          ports:
            - containerPort: 8080
              name: web-ui
              protocol: TCP
            - containerPort: 6881
              name: torrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP

          volumeMounts:
          - name: media
            mountPath: /media
          - name: config
            mountPath: /config

      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media-shared-pvc
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config-pvc
