apps/base/media/qbittorrent/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent-tcp-svc            
  namespace: media
spec:
  selector:
    app: qbittorrent       
  ports:                      
  - port: 8080             
    targetPort: 8080      
    name: web-ui         
    protocol: TCP
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent-udp-svc            
  namespace: media     
spec:
  selector:
    app: qbittorrent       
  ports:
  - port: 6881               
    targetPort: 6881        
    name: torrent-udp         
    protocol: UDP
  - port: 6881
    targetPort: 6881
    name: torrent-tcp
    protocol: TCP  
  type: LoadBalancer # for port-fowarding
