apps/base/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: qbittorrent.mkped.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-tcp-svc
                port:
                  number: 80
